...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/next_bttn"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="36dp"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.758"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
...
        android:inputType="numberSigned|numberDecimal"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/prev_bttn"
        app:layout_constraintStart_toStartOf="@+id/path_to_exhibit" />

    <Switch
        android:id="@+id/directionsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="Detailed View"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.913" />

    <Button
        android:id="@+id/clear_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:onClick="onClearPlanPressed"
        android:backgroundTint="@color/green_700"
        android:text="Clear"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />
</androidx.constraintlayout.widget.ConstraintLayout>

...
