...
      android:textSize="20dp"
      app:layout_constraintEnd_toEndOf="@+id/imageView2"
      app:layout_constraintHorizontal_bias="0.038"
      app:layout_constraintStart_toStartOf="@+id/imageView2"
      app:layout_constraintTop_toTopOf="@+id/imageView2" />

  <Button android:id="@+id/plan_bttn"
      android:layout_width="80dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="36dp"
      android:text="Plan"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/search_bar"
...
      android:shadowColor="#454545"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/exhibit_list"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="4dp"
      android:paddingLeft="24dp"
      android:paddingRight="24dp"
      app:layout_constraintBottom_toTopOf="@+id/compact_list"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/search_bar" />

  <Button
      android:id="@+id/exhibit_clear_button"
...
